some more fixes

--- a/src/Wpf.Ui/Styles/Controls/Dialog.xaml
+++ b/src/Wpf.Ui/Styles/Controls/Dialog.xaml
@@ -11,6 +11,11 @@
     xmlns:controls="clr-namespace:Wpf.Ui.Controls">
 
     <Style TargetType="{x:Type controls:Dialog}">
+        <Setter Property="Foreground">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource TextFillColorPrimary}" />
+            </Setter.Value>
+        </Setter>
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
@@ -119,5 +124,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
