--- a/src/Wpf.Ui.Demo/Views/Pages/Menus.xaml
+++ b/src/Wpf.Ui.Demo/Views/Pages/Menus.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Wpf.Ui.Demo.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Menus"
@@ -88,10 +87,17 @@
             FontSize="16"
             Text="ToolBar" />
         <TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Default ToolBarTray" />
-        <ToolBarTray Margin="0,8,0,0">
+        <ToolBarTray
+            Margin="0,8,0,0"
+            Background="Transparent"
+            IsLocked="True">
             <ToolBar>
                 <Button Content="New" />
                 <Button Content="Open" />
+                <Separator
+                    Height="50"
+                    BorderBrush="{StaticResource ControlElevationBorderBrush}"
+                    BorderThickness="1,1,0,0" />
             </ToolBar>
             <ToolBar>
                 <Button Content="Save" ToolBar.OverflowMode="Never" />
@@ -123,7 +129,7 @@
             FontSize="16"
             Text="Tabs" />
         <TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Default TabControl" />
-        <TabControl Margin="0,8,0,0">
+        <TabControl Margin="0,8,0,0" TabStripPlacement="Left">
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -143,7 +149,14 @@
                     </StackPanel>
                 </TabItem.Header>
                 <Grid>
-                    <TextBlock Margin="12" Text="World" />
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="81*" />
+                        <ColumnDefinition Width="677*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Grid.ColumnSpan="2"
+                        Margin="12,12,12,12"
+                        Text="World" />
                 </Grid>
             </TabItem>
         </TabControl>
