--- a/src/Wpf.Ui/Styles/Controls/MenuItem.xaml
+++ b/src/Wpf.Ui/Styles/Controls/MenuItem.xaml
@@ -464,7 +464,7 @@
                         Grid.Column="1"
                         Margin="0,0,6,0"
                         Filled="{TemplateBinding SymbolIconFilled}"
-                        FontSize="{TemplateBinding FontSize}"
+                        FontSize="18"
                         Symbol="{TemplateBinding SymbolIcon}" />
 
                     <ContentPresenter
@@ -874,5 +874,4 @@
     </Style>
 
     <Style BasedOn="{StaticResource WpfUiMenuItem}" TargetType="{x:Type controls:MenuItem}" />
-
 </ResourceDictionary>
